--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -161,7 +161,7 @@
   <a class="anchor" id="group"></a>
   <h1 class="col-12 px-0 mb-0">Research Group</h1>
   <div class="row mx-auto">
-    <div class="col-4 px-0">
+    <div class="col-12 col-lg-4 px-0 mt-3 mt-lg-0">
       <h2 class="col-12 px-0 mb-1">PhD Students</h2>
       <ul class="my-0 px-2" style="list-style-type: none; ">
         {% for course in site.data.group.phd %}
@@ -169,7 +169,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-4 px-0">
+    <div class="col-12 col-lg-4 px-0 mt-3 mt-lg-0">
       <h2 class="col-12 px-0 mb-1">MSc/Undergrad Students</h2>
       <ul class="my-0 px-2" style="list-style-type: none; ">
         {% for course in site.data.group.msc %}
@@ -177,7 +177,7 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="col-4 px-0">
+    <div class="col-12 col-lg-4 px-0 mt-3 mt-lg-0">
       <h2 class="col-12 px-0 mb-1">External Student Collaborators</h2>
       <ul class="my-0 px-2" style="list-style-type: none; ">
         {% for course in site.data.group.collabs %}
