--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- <html lang="en"> -->
 <head>
     <meta charset="UTF-8">
-    <title>Pedro Morgado</title>
+    <title>Qitong Wang</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" content="IE=edge, chrome=1">
-    <meta name="title" content="Pedro's homepage">
-    <meta name="author" content="Pedro Morgado">
-    <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png"/>
+    <meta name="title" content="Qitong's homepage">
+    <!-- <meta name="author" content="Qitong Wang"> -->
+    <link rel="shortcut icon" type="image/png" href="/assets/images/IMG_5378.JPG"/>
 
-    <meta property="og:title" content="Pedro Morgado">
-    <meta property="og:image" content="img/profile.jpg">
-    <meta property="og:url" content="https://pedro-morgado.github.io/">
+    <meta property="og:title" content="Qitong Wang">
+    <meta property="og:image" content="img/profile1.jpg">
+    <!-- <meta property="og:url" content="https://pedro-morgado.github.io/"> -->
     <meta property="og:type" content="website">
 
     <!-- Google tag (gtag.js) -->
@@ -46,7 +46,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-<!--    <a class="navbar-brand js-scroll-trigger" href="#about">Pedro Morgado</a>-->
+   <!-- <a class="navbar-brand js-scroll-trigger" href="#about">Qitong Wang</a> -->
     <button class="navbar-toggler navbar-toggler-right navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -56,13 +56,19 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#group">Group</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#service">Service</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#industry">Industry</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#misc">MISC</a>
         </li>
       </ul>
     </div>
@@ -77,7 +83,7 @@
   <div class="row mx-auto mb-3">
     <div class="col-lg-3 col-sm-12 my-auto py-2 px-0">
       <div class="row">
-        <img id="profilePhoto" class="img-fluid img-profile" src="/assets/images/profile.jpeg" alt="">
+        <img id="profilePhoto" class="img-fluid img-profile" src="/assets/images/profile1.jpg" alt="">
       </div>
     </div>
 
@@ -108,12 +114,16 @@
   <div class="row">
     <div class="col-12 mx-auto pt-5">
       <p class="lead">
-        I am an Assistant Professor at the University of Wisconsin-Madison in the department of Electrical and Computer Engineering, and affiliated with the Computer Sciences department.
-        My research interests are at the intersection of computer vision and machine learning. Specifically, I develop systems that continuously learn to perceive the world through multiple sensory modalities.
+        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD), advised by <a href="https://sites.google.com/site/xipengcshomepage/home" target="_blank">Xi Peng</a>. 
+        My research primarily revolves around Computer Vision and Machine Learning.
+        Specifically, I am dedicated to exploring the application of machine learning techniques in the domain of scientific ML data. 
+        Additionally, my research involves developing frameworks that can effectively learn and represent multiview data.
       </p>
       <p class="lead mb-2">
-        Previously, I was a postdoc researcher at Carnegie Mellon University, working with <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Abhinav Gupta</a>.
-        I completed my PhD at the University of California San Diego advised by <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Nuno Vasconcelos</a>, and both BSc and MSc degrees at Instituto Superior Técnico, Universidade de Lisboa, where I worked with <a href="http://users.isr.ist.utl.pt/~msilveira/" target="_blank">Margarida Silveira</a> and <a href="http://users.isr.ist.utl.pt/~jsm/" target="_blank">Jorge S Marques</a>.
+        Prior to joining the University of Delaware, I completed my M.S. degree in the Department of Computer Science at Boston University advised by <a href="https://www.cs.bu.edu/faculty/betke/" target="_blank">Margrit Betke</a>.
+        <!-- I also worked as visiting student at Shenzhen Institutes of Advanced Technology (SIAT) of the Chinese Academy of Science (CAS), where I worked with <a href="http://english.siat.cas.cn/SI2017/IAIT2017/RC1/CPE_20513/Researchers1/201707/t20170724_181172.html" target="_blank">Yu Qiao</a>. -->
+        During that period, my research focus was on developing models for text detection and recognition.
+        Before that, I got my B.Eng. degree from Wuhan University of Technology.
       </p>
 <!--      <p class="lead mb-2"><strong>-->
 <!--        I am looking for highly motivated PhD and MS students to join the lab. If you are interested, please contact me.-->
@@ -139,65 +149,7 @@
   {% endfor %}
   </ul>
   </span>
-  <a href="javascript:;" onclick="showMoreNews()" id="moreNewsBtn" class="my-2 px-4">--- show more ---</a>
-</section>
-<script>
-    function showMoreNews() {
-        var moreNewsTxt = document.getElementById("moreNews");
-        var moreNewsBtn = document.getElementById("moreNewsBtn");
-        if (moreNewsTxt.style.display === "none") {
-            moreNewsBtn.innerHTML = "--- show less ---";
-            moreNewsTxt.style.display = "inline";
-        } else {
-            moreNewsBtn.innerHTML = "--- show more ---";
-            moreNewsTxt.style.display = "none";
-        }
-    }
-</script>
-
-<!-- Group-->
-<section class="container lead" >
-  <hr>
-  <a class="anchor" id="group"></a>
-  <h1 class="col-12 px-0 mb-0">Research Group</h1>
-  <div class="row mx-auto">
-    <div class="col-12 col-lg-4 px-0 mt-3 mt-lg-0">
-      <h2 class="col-12 px-0 mb-1">PhD Students</h2>
-      <ul class="my-0 px-2" style="list-style-type: none; ">
-        {% for course in site.data.group.phd %}
-        <li>{{ course }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    <div class="col-12 col-lg-4 px-0 mt-3 mt-lg-0">
-      <h2 class="col-12 px-0 mb-1">MSc/Undergrad Students</h2>
-      <ul class="my-0 px-2" style="list-style-type: none; ">
-        {% for course in site.data.group.msc %}
-        <li>{{ course }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    <div class="col-12 col-lg-4 px-0 mt-3 mt-lg-0">
-      <h2 class="col-12 px-0 mb-1">External Student Collaborators</h2>
-      <ul class="my-0 px-2" style="list-style-type: none; ">
-        {% for course in site.data.group.collabs %}
-        <li>{{ course }}</li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-</section>
-
-<!-- Teaching-->
-<section class="container lead" >
-  <hr>
-  <a class="anchor" id="teaching"></a>
-  <h1 class="col-12 px-0 mb-0">Teaching</h1>
-  <ul class="my-0 px-2" style="list-style-type: none; ">
-    {% for course in site.data.teaching %}
-    <li>{{ course }}</li>
-    {% endfor %}
-  </ul>
+  <!-- <a href="javascript:;" onclick="showMoreNews()" id="moreNewsBtn" class="my-2 px-4">--- show more ---</a> -->
 </section>
 
 <!-- Publications -->
@@ -356,9 +308,92 @@
   </div>
 </section>
 
+<!-- service-->
+<section class="container lead" >
+  <hr>
+  <a class="anchor" id="service"></a>
+  <h1 class="col-12 px-0 mb-0">Service</h1>
+  <ul class="my-0 px-2" style="list-style-type: none; ">
+    {% for ss in site.data.service %}
+    <li>{{ ss }}</li>
+    {% endfor %}
+  </ul>
+</section>
+
+<!-- Education-->
+<section class="container lead">
+
+  <hr>
+  <a class="anchor" id="education"></a>
+  <h1 class="col-12 px-0 mb-0">Education</h1>
+  <div class="container desc">
+    <div class="row">
+            <div class="col-lg-2 col-lg-offset-0">
+            </div><br/><br/>
+            <div class="col-lg-10">
+                <div class="row text-center">
+                    <div class="col-sm-3 col-sm-offset-1">
+                        <p class="text-center"><img class="img-responsive" src="assets/images/udel.png" alt="" width="100px" height="100px"></p>
+                        <p class="text-center" style="font-size: 12px;">University of Delaware <br/> May 2021 - Present <br/> Doctor of Philosophy</p>
+                    </div>
+                    <div class="col-sm-1"></div> <!-- 空白列 -->
+                    <div class="col-sm-3 col-sm-offset-1">
+                        <p class="text-center"><img class="img-responsive" src="assets/images/bu.png" alt="" width="100px" height="100px"></p>
+                        <p class="text-center" style="font-size: 12px;">Boston University <br/> Sep 2018 - May 2020 <br/> Master of Science</p>
+                    </div>
+                    <div class="col-sm-1"></div> <!-- 空白列 -->
+                    <div class="col-sm-3 col-sm-offset-1">
+                        <p class="text-center"><img class="img-responsive" src="assets/images/whut.png" alt="" width="100px" height="100px"></p>
+                        <p class="text-center" style="font-size: 12px;">Wuhan University of Tech <br/> Sep 2014 - Jun 2018 <br/> Bachelor of Engineering</p>
+                    </div>
+                </div>
+            </div>
+    </div><!--/.row -->
+  </div><!--/.container -->
+</section><!--//section-->
+
+<!-- Industry-->
+<section class="container lead">
+  <hr>
+  <a class="anchor" id="industry"></a>
+  <h1 class="col-12 px-0 mb-0">Industry</h1>
+  <div class="container desc">
+      <div class="row justify-content-center"> <!-- 使用justify-content-center类来水平居中 -->
+          <div class="col-lg-2 col-lg-offset-0">
+          </div><br/><br/>
+          <div class="col-lg-10">
+              <div class="row text-center">
+                  <div class="col-sm-5 col-sm-offset-1">
+                      <p class="text-center"><img class="img-responsive" src="assets/images/aws1.png" alt="" width="100px" height="100px"></p>
+                      <p class="text-center" style="font-size: 12px;">Amazon Web Service <br/> Jun 2021 - Aug 2021</p>
+                  </div>
+                  <div class="col-sm-1"></div> <!-- 空白列 -->
+                  <div class="col-sm-5 col-sm-offset-1">
+                    <p class="text-center"><img class="img-responsive" src="assets/images/siat.jpeg" alt="" width="100px" height="100px"></p>
+                    <p class="text-center" style="font-size: 12px;">Shenzhen Institutes of Advanced Tech <br/> May 2020 - Aug 2020</p>
+                </div>
+              </div>
+          </div>
+      </div><!--/.row -->
+  </div><!--/.container -->
+</section><!--//section-->
+
+<!-- misc-->
+<section class="container lead" >
+  <hr>
+  <a class="anchor" id="misc"></a>
+  <h1 class="col-12 px-0 mb-0">MISC</h1>
+  <ul class="my-0 px-2" style="list-style-type: none; ">
+    <p class="lead">My <a href="https://www.16personalities.com/free-personality-test" target="_blank">MBTI</a> is <a href="https://www.16personalities.com/articles/assertive-commander-entj-a-vs-turbulent-commander-entj-t" target="_blank">ENTJ-A</a>. 
+      I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch" target="_blank">perfect pitch</a>. :)</p>
+    <p class="lead"></p>
+  </ul>
+</section>
+
 <section class="container py-0" id="footnote">
   <div class="col-12 py-5" style="text-align: center;">
-    <a href="#about"><i class="fa-solid fa-angles-up"></i>&nbsp;&nbsp;Back to the top</a>
+    <a href="#about"><i class="fa-solid fa-angles-up"></i>&nbsp;&nbsp;Back to the top</a><br>
+    <a href="https://pedro-morgado.github.io/" style="font-size: 8px;">&nbsp;&nbsp;(website code reference)</a>
   </div>
 </section>
 
