--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#industry">Industry</a>
+          <a class="nav-link js-scroll-trigger" href="#internship">Internship</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#misc">MISC</a>
@@ -352,11 +352,11 @@
   </div><!--/.container -->
 </section><!--//section-->
 
-<!-- Industry-->
+<!-- Internship-->
 <section class="container lead">
   <hr>
-  <a class="anchor" id="industry"></a>
-  <h1 class="col-12 px-0 mb-0">Industry</h1>
+  <a class="anchor" id="internship"></a>
+  <h1 class="col-12 px-0 mb-0">Internship</h1>
   <div class="container desc">
       <div class="row justify-content-center"> <!-- 使用justify-content-center类来水平居中 -->
           <div class="col-lg-2 col-lg-offset-0">
