--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,7 +83,7 @@
   <div class="row mx-auto mb-3">
     <div class="col-lg-3 col-sm-12 my-auto py-2 px-0">
       <div class="row">
-        <img id="profilePhoto" class="img-fluid img-profile" src="/assets/images/profile1.jpg" alt="">
+        <img id="profilePhoto" class="img-fluid img-profile" src="/assets/images/profile4.JPEG" alt="">
       </div>
     </div>
 
