--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -114,7 +114,8 @@
   <div class="row">
     <div class="col-12 mx-auto pt-5">
       <p class="lead">
-        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD), advised by <a href="https://sites.google.com/site/xipengcshomepage/home" target="_blank">Xi Peng</a>. 
+        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD), advised by <a href="https://sites.google.com/site/xipengcshomepage/home" target="_blank">Xi Peng</a>.
+        In parallel, I collaborate with <a href="https://en.wikipedia.org/wiki/Julie_Michelle_Klinger" target="_blank">Julie Michelle Klinger</a> on designing a machine learning framework tailored for geospatial data analysis.
         My research primarily revolves around Computer Vision and Machine Learning.
         Specifically, I am dedicated to exploring the application of machine learning techniques in the domain of scientific ML data. 
         Additionally, my research involves developing frameworks that can effectively learn and represent multiview data.
@@ -123,7 +124,7 @@
         Prior to joining the University of Delaware, I completed my M.S. degree in the Department of Computer Science at Boston University advised by <a href="https://www.cs.bu.edu/faculty/betke/" target="_blank">Margrit Betke</a>.
         <!-- I also worked as visiting student at Shenzhen Institutes of Advanced Technology (SIAT) of the Chinese Academy of Science (CAS), where I worked with <a href="http://english.siat.cas.cn/SI2017/IAIT2017/RC1/CPE_20513/Researchers1/201707/t20170724_181172.html" target="_blank">Yu Qiao</a>. -->
         During that period, my research focus was on developing models for text detection and recognition.
-        Before that, I got my B.Eng. degree from Wuhan University of Technology.
+        Before that, I got my B.Eng. degree from the Wuhan University of Technology.
       </p>
 <!--      <p class="lead mb-2"><strong>-->
 <!--        I am looking for highly motivated PhD and MS students to join the lab. If you are interested, please contact me.-->
