--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -115,7 +115,7 @@
     <div class="col-12 mx-auto pt-5">
       <p class="lead">
         I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD), advised by <a href="https://sites.google.com/site/xipengcshomepage/home" target="_blank">Xi Peng</a>.
-        In parallel, I collaborate with <a href="https://en.wikipedia.org/wiki/Julie_Michelle_Klinger" target="_blank">Julie Michelle Klinger</a> on designing a machine learning framework tailored for geospatial data analysis.
+        In parallel, I collaborate with <a href="https://en.wikipedia.org/wiki/Julie_Michelle_Klinger" target="_blank">Julie Michelle Klinger</a> on designing machine learning frameworks tailored for geospatial data analysis.
         My research primarily revolves around Computer Vision and Machine Learning.
         Specifically, I am dedicated to exploring the application of machine learning techniques in the domain of scientific ML data. 
         Additionally, my research involves developing frameworks that can effectively learn and represent multiview data.
