--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,7 +63,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#internship">Internship</a>
+          <a class="nav-link js-scroll-trigger" href="#internship">Intern & Collab</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#misc">MISC</a>
@@ -355,21 +355,27 @@
 <section class="container lead">
   <hr>
   <a class="anchor" id="internship"></a>
-  <h1 class="col-12 px-0 mb-0">Internship</h1>
+  <h1 class="col-12 px-0 mb-0">Intern & Collab</h1>
   <div class="container desc">
-      <div class="row justify-content-center"> <!-- 使用justify-content-center类来水平居中 -->
+      <!-- <div class="row justify-content-center">  -->
+      <div class="row">
           <div class="col-lg-2 col-lg-offset-0">
           </div><br/><br/>
           <div class="col-lg-10">
               <div class="row text-center">
-                  <div class="col-sm-5 col-sm-offset-1">
-                      <p class="text-center"><img class="img-responsive" src="assets/images/aws1.png" alt="" width="100px" height="100px"></p>
-                      <p class="text-center" style="font-size: 12px;">Amazon Web Service <br/> Jun 2021 - Aug 2021</p>
+                  <div class="col-sm-3 col-sm-offset-1">
+                    <p class="text-center"><img class="img-responsive" src="assets/images/google.png" alt="" width="100px" height="100px"></p>
+                    <p class="text-center" style="font-size: 11px;">Google Research <br/> Research Collaboration <br/> Sep 2021 - Nov 2022</p>
                   </div>
                   <div class="col-sm-1"></div> <!-- 空白列 -->
-                  <div class="col-sm-5 col-sm-offset-1">
+                  <div class="col-sm-3 col-sm-offset-1">
+                      <p class="text-center"><img class="img-responsive" src="assets/images/aws1.png" alt="" width="100px" height="100px"></p>
+                      <p class="text-center" style="font-size: 11px;">Amazon Web Service <br/> Applied Science Intern <br/> Jun 2021 - Aug 2021</p>
+                  </div>
+                  <div class="col-sm-1"></div> <!-- 空白列 -->
+                  <div class="col-sm-3 col-sm-offset-1">
                     <p class="text-center"><img class="img-responsive" src="assets/images/siat.jpeg" alt="" width="100px" height="100px"></p>
-                    <p class="text-center" style="font-size: 12px;">Shenzhen Institutes of Advanced Tech <br/> May 2020 - Aug 2020</p>
+                    <p class="text-center" style="font-size: 11px;">Shenzhen Inst of Adv Tech <br/>Visiting Student <br/>  May 2020 - Aug 2020</p>
                 </div>
               </div>
           </div>
