--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -124,9 +124,9 @@
         During that period, my research focus was on developing models for text detection and recognition.
         Before that, I got my B.Eng. degree from the Wuhan University of Technology.
       </p>
-<!--      <p class="lead mb-2"><strong>-->
-<!--        I am looking for highly motivated PhD and MS students to join the lab. If you are interested, please contact me.-->
-<!--      </strong></p>-->
+     <p class="lead mb-2"><strong>
+        I am looking for internship opportunities in the summer of 2025. Please feel free to reach out!
+    </strong></p>
     </div>
   </div>
 </section>
