--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -112,11 +112,11 @@
   <div class="row">
     <div class="col-12 mx-auto pt-5">
       <p class="lead">
-        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences at the University of Delaware, advised by <a href="https://sites.google.com/site/xipengcshomepage/home" target="_blank">Xi Peng</a>.
-        Previously, I collaborated with <a href="https://en.wikipedia.org/wiki/Julie_Michelle_Klinger" target="_blank">Julie Michelle Klinger</a> on designing machine learning frameworks tailored for geospatial data analysis.
+        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD), advised by <a href="https://sites.google.com/site/xipengcshomepage/home" target="_blank">Xi Peng</a>.
+        Previously I collaborate with <a href="https://en.wikipedia.org/wiki/Julie_Michelle_Klinger" target="_blank">Julie Michelle Klinger</a> on designing machine learning frameworks tailored for geospatial data analysis.
         My research primarily revolves around Computer Vision and Machine Learning.
-        Specifically, I am dedicated to exploring the application of machine learning techniques in the domain of scientific ML data. 
-        Additionally, my research involves developing frameworks that can effectively learn and represent multiview data.
+        Specifically, I am dedicated to exploring the application of trustworthy deep learning models. 
+        Additionally, my research also involves developing frameworks for video learning and understanding.
       </p>
       <p class="lead mb-2">
         Prior to joining the University of Delaware, I completed my M.S. degree in the Department of Computer Science at Boston University advised by <a href="https://www.cs.bu.edu/faculty/betke/" target="_blank">Margrit Betke</a>.
@@ -124,7 +124,7 @@
         During that period, my research focus was on developing models for text detection and recognition.
         Before that, I got my B.Eng. degree from the Wuhan University of Technology.
       </p>
-     <p class="lead mb-2"><strong>
+      <p class="lead mb-2"><strong>
         I am looking for internship opportunities in the summer of 2025. Please feel free to reach out!
     </strong></p>
     </div>
