--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -112,7 +112,7 @@
   <div class="row">
     <div class="col-12 mx-auto pt-5">
       <p class="lead">
-        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD), advised by <a href="https://sites.google.com/site/xipengcshomepage/home" target="_blank">Xi Peng</a>.
+        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD), advised by <a href="https://deep-real.github.io/dr_xipeng.html" target="_blank">Xi Peng</a>.
         Previously I collaborate with <a href="https://en.wikipedia.org/wiki/Julie_Michelle_Klinger" target="_blank">Julie Michelle Klinger</a> on designing machine learning frameworks tailored for geospatial data analysis.
         My research primarily revolves around Computer Vision and Machine Learning.
         Specifically, I am dedicated to exploring the application of trustworthy deep learning models. 
@@ -124,9 +124,6 @@
         During that period, my research focus was on developing models for text detection and recognition.
         Before that, I got my B.Eng. degree from the Wuhan University of Technology.
       </p>
-      <p class="lead mb-2"><strong>
-        I am looking for internship opportunities in the summer of 2025. Please feel free to reach out!
-    </strong></p>
     </div>
   </div>
 </section>
@@ -363,18 +360,23 @@
           </div><br/><br/>
           <div class="col-lg-10">
               <div class="row text-center">
-                  <div class="col-sm-3 col-sm-offset-1">
-                    <p class="text-center"><img class="img-responsive" src="assets/images/google.png" alt="" width="100px" height="100px"></p>
+                  <div class="col-sm-5 col-sm-offset-2">
+                    <p class="text-center"><img class="img-responsive" src="assets/images/dolby.png" alt="" width="125px" height="125px"></p>
+                    <p class="text-center" style="font-size: 11px;">Dolby Laboratories <br/> PhD Research Intern <br/> Jun 2025 - Sep 2025</p>
+                  </div>
+                  <div class="col-sm-1"></div> <!-- 空白列 -->
+                  <div class="col-sm-4 col-sm-offset-2">
+                    <p class="text-center"><img class="img-responsive" src="assets/images/google.png" alt="" width="125px" height="125px"></p>
                     <p class="text-center" style="font-size: 11px;">Google Research <br/> Research Collaboration <br/> Sep 2021 - Nov 2022</p>
                   </div>
                   <div class="col-sm-1"></div> <!-- 空白列 -->
-                  <div class="col-sm-3 col-sm-offset-1">
-                      <p class="text-center"><img class="img-responsive" src="assets/images/aws1.png" alt="" width="100px" height="100px"></p>
+                  <div class="col-sm-5 col-sm-offset-2">
+                      <p class="text-center"><img class="img-responsive" src="assets/images/aws1.png" alt="" width="125px" height="125px"></p>
                       <p class="text-center" style="font-size: 11px;">Amazon Web Service <br/> Applied Science Intern <br/> Jun 2021 - Aug 2021</p>
                   </div>
                   <div class="col-sm-1"></div> <!-- 空白列 -->
-                  <div class="col-sm-3 col-sm-offset-1">
-                    <p class="text-center"><img class="img-responsive" src="assets/images/siat.jpeg" alt="" width="100px" height="100px"></p>
+                  <div class="col-sm-4 col-sm-offset-2">
+                    <p class="text-center"><img class="img-responsive" src="assets/images/siat.jpeg" alt="" width="125px" height="125px"></p>
                     <p class="text-center" style="font-size: 11px;">Shenzhen Inst of Adv Tech <br/>Visiting Student <br/>  May 2020 - Aug 2020</p>
                 </div>
               </div>
