--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -124,6 +124,11 @@
         During that period, my research focus was on developing models for text detection and recognition.
         Before that, I got my B.Eng. degree from the Wuhan University of Technology.
       </p>
+      <p class="lead mb-2">
+        In industry, I am fortunate to have the opportunities to work with <a href="https://fandu.org/" target="_blank">Fan Du</a> (Dolby Laboratories),
+        <a href="http://www.tliu.org/" target="_blank">Ting Liu</a> (Google), <a href="https://garyzhao.github.io/" target="_blank">Long Zhao</a> (Google), <a href="https://scholar.google.com/citations?user=1H9CkZgAAAAJ&hl=en" target="_blank">Liangzhe Yuan</a> (Google), 
+        <a href="https://scholar.google.com/citations?user=_0aMq28AAAAJ&hl=en" target="_blank">R. Manmatha</a> (Amazon), <a href="https://www.linkedin.com/in/yusheng-x-4a437547/" target="_blank">Yusheng Xie</a> (Amazon).
+      </p>
     </div>
   </div>
 </section>
