--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -112,7 +112,7 @@
   <div class="row">
     <div class="col-12 mx-auto pt-5">
       <p class="lead">
-        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD).
+        I am currently pursuing my Ph.D. in the Department of Computer and Information Sciences (CIS) at the University of Delaware (UD), advised by <a href="https://www.cis.udel.edu/people/faculty/christopher-rasmussen/" target="_blank">Christopher Rasmussen</a>.
         Previously I collaborate with <a href="https://en.wikipedia.org/wiki/Julie_Michelle_Klinger" target="_blank">Julie Michelle Klinger</a> on designing machine learning frameworks tailored for geospatial data analysis.
         My research primarily revolves around Computer Vision and Machine Learning.
         Specifically, I am dedicated to exploring the application of trustworthy deep learning models. 
