--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -125,7 +125,7 @@
         Before that, I got my B.Eng. degree from the Wuhan University of Technology.
       </p>
       <p class="lead mb-2">
-        In the industry, I am fortunate to have the opportunities to intern or collaborate with <a href="https://fandu.org/" target="_blank">Fan Du</a> (Dolby Laboratories),
+        In the industry, I am fortunate to have the opportunities to intern or collaborate with <a href="https://fandu.org/" target="_blank">Fan Du</a> (Dolby Laboratories), <a href="https://pranavmaneriker.github.io/about/" target="_blank">Pranav Maneriker</a> (Dolby Laboratories), <a href="https://www.linkedin.com/in/jihui-jin-4aa111112/" target="_blank">Jihui Jin</a> (Dolby Laboratories),
         <a href="http://www.tliu.org/" target="_blank">Ting Liu</a> (Google), <a href="https://garyzhao.github.io/" target="_blank">Long Zhao</a> (Google), <a href="https://scholar.google.com/citations?user=1H9CkZgAAAAJ&hl=en" target="_blank">Liangzhe Yuan</a> (Google), 
         <a href="https://scholar.google.com/citations?user=_0aMq28AAAAJ&hl=en" target="_blank">R. Manmatha</a> (Amazon), <a href="https://www.linkedin.com/in/yusheng-x-4a437547/" target="_blank">Yusheng Xie</a> (Amazon).
       </p>
