--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -81,7 +81,7 @@
   <div class="row mx-auto mb-3">
     <div class="col-lg-3 col-sm-12 my-auto py-2 px-0">
       <div class="row">
-        <img id="profilePhoto" class="img-fluid img-profile" src="/assets/images/profile21.JPEG" alt="">
+        <img id="profilePhoto" class="img-fluid img-profile" src="/assets/images/IMG_2064.jpeg" alt="">
       </div>
     </div>
 
