--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -129,6 +129,9 @@
         <a href="http://www.tliu.org/" target="_blank">Ting Liu</a> (Google), <a href="https://garyzhao.github.io/" target="_blank">Long Zhao</a> (Google), <a href="https://scholar.google.com/citations?user=1H9CkZgAAAAJ&hl=en" target="_blank">Liangzhe Yuan</a> (Google), 
         <a href="https://scholar.google.com/citations?user=_0aMq28AAAAJ&hl=en" target="_blank">R. Manmatha</a> (Amazon), <a href="https://www.linkedin.com/in/yusheng-x-4a437547/" target="_blank">Yusheng Xie</a> (Amazon).
       </p>
+      <p class="lead mb-2">
+          <strong>I am actively seeking summer internship opportunities for 2026 — feel free to connect with me! :)</strong>
+      </p>
     </div>
   </div>
 </section>
