Change author link color in home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -206,7 +206,7 @@
             {% assign author_info = site.data.people[author2] %}
             {% if author_info %}
               {% if author_info.website %}
-                <a style="color:#063d96" href="{{ author_info.website }}">{{ author_info.name }}</a>{{ extra }}{% if forloop.last == false %},&nbsp{% endif %}
+                <a style="color:#839aad" href="{{ author_info.website }}">{{ author_info.name }}</a>{{ extra }}{% if forloop.last == false %},&nbsp{% endif %}
               {% else %}
                 {% if author2 == "Me" %}<b>{% endif %}{{ author_info.name }}{% if author2 == "Me" %}</b>{% endif %}
               {% endif %}
@@ -269,7 +269,7 @@
           {% assign author_info = site.data.people[author2] %}
           {% if author_info %}
           {% if author_info.website %}
-          <a style="color:#063d96" href="{{ author_info.website }}">{{ author_info.name }}</a>
+          <a style="color:#839aad" href="{{ author_info.website }}">{{ author_info.name }}</a>
           {% else %}
           {% if author2 == "Me" %}<b>{% endif %}{{ author_info.name }}{% if author2 == "Me" %}</b>{% endif %}
           {% endif %}
