Update internship dates for Dolby Laboratories

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -383,7 +383,7 @@
               <div class="row text-center">
                   <div class="col-sm-5 col-sm-offset-2">
                     <p class="text-center"><img class="img-responsive" src="assets/images/dolby.png" alt="" width="125px" height="125px"></p>
-                    <p class="text-center" style="font-size: 11px;">Dolby Laboratories <br/> PhD Research Intern <br/> Jun 2025 - Sep 2025</p>
+                    <p class="text-center" style="font-size: 11px;">Dolby Laboratories <br/> PhD Research Intern <br/> Summer 2025 & 2026</p>
                   </div>
                   <div class="col-sm-1"></div> <!-- 空白列 -->
                   <div class="col-sm-4 col-sm-offset-2">
