Update personality type from ENTJ-A to ENTP-A

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -412,7 +412,7 @@
   <a class="anchor" id="misc"></a>
   <h1 class="col-12 px-0 mb-0">MISC</h1>
   <ul class="my-0 px-2" style="list-style-type: none; ">
-    <p class="lead">My <a href="https://www.16personalities.com/free-personality-test" target="_blank">MBTI</a> is <a href="https://www.16personalities.com/articles/assertive-commander-entj-a-vs-turbulent-commander-entj-t" target="_blank">ENTJ-A</a>. 
+    <p class="lead">My <a href="https://www.16personalities.com/free-personality-test" target="_blank">MBTI</a> is <a href="https://www.16personalities.com/articles/assertive-debater-entp-a-vs-turbulent-debater-entp-t" target="_blank">ENTP-A</a>. 
       I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch" target="_blank">perfect pitch</a>. :)</p>
     <p class="lead"></p>
   </ul>
